# gokart-pipelner-templete

./: Dockerfile  README.md  main.py  pyproject.toml
conf/: logging.ini
src/dataset/: load_train_data.py  train_test_split.py
src/utils/: base_task.py
